# langgraph_project_template

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README_zh.md  langgraph.json  mcp.json  pyproject.toml  test.ipynb
.claude/: settings.local.json
.cursor/rules/: overview.mdc
.serena/: project.yml
.serena/memories/: code_style_conventions.md  core_architecture_chat_models.md  guido_recommended_improvements.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md
app/common/: chat_models.py  text_splitters.py  utils.py
examples/: embedding_caching_usage.py  logging_usage.py
examples/graph/: react.py  research_agents.py
src/: __init__.py
src/app/agents/: react.py
src/app/common/: mcp.py  utils.py
src/app/common/models/: __init__.py  chat_models.py  document_compressor.py  embedding_models.py
src/app/common/models/dmxapi/: __init__.py  client.py  rerank.py
src/app/common/models/siliconflow/: __init__.py  client.py  rerank.py
src/app/common/prebuild/agents/: __init__.py
src/app/common/prebuild/agents/deepagents/: __init__.py  graph.py  middleware.py  model.py  prompts.py  state.py  tools.py  types.py
src/app/common/prebuild/agents/react/: react.py
src/app/common/tools/: __init__.py  mcp.py
src/app/common/utils/: __init__.py  core.py  file.py  load.py  logging.py  mcp.py
tests/: test_chat_model.py  test_models.ipynb
tests/app/common/models/: test_embedding_models.py  test_embedding_models_simple.py  test_init_chat_model.ipynb  test_init_chat_models.ipynb  test_init_embedding_model.ipynb  test_init_embedding_models.ipynb  test_init_rerank_model.ipynb
tests/app/common/tools/: test_mcp.ipynb  test_mcp.py
tests/app/common/utils/: test_logging.py
